auto scrolling of updates div

--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -428,9 +428,11 @@
           <div class="col-sm-3 col-md-3 pull-right">
             <div class="well well-large" style="min-height: 150px;">
               <b class="headlines pull-right">Updates <span class="label label-success"><%= updates.count %></span></b><br />
-              <% updates.each do |update| %>
-                <li class="list-group-item" onclick="showUpdateDetails('<%= update.update_id %>')"><a href="#"><i class="fa fa-refresh "></i> <%= UserNote.trim(update.title, 20) %></a></li>
-              <% end %>
+              <div style="overflow: auto; height: 150px; overflow-y: hidden;" class="updates">
+                <% updates.each do |update| %>
+                  <li class="list-group-item" onclick="showUpdateDetails('<%= update.update_id %>')"><a href="#"><i class="fa fa-refresh "></i> <%= UserNote.trim(update.title, 20) %></a></li>
+                <% end %>
+              </div>
             </div>
           </div>
         </div>
@@ -621,6 +623,8 @@
     }
 
     $(".news-headlines").animate({ scrollTop: $('.news-headlines').height() }, 5000);
+    $(".updates").animate({ scrollTop: $('.updates').height() }, 5000);
+
     setTimeout(function() {
       $('.news-headlines').animate({scrollTop:0}, 5000);
     },5000);
@@ -636,6 +640,16 @@
 
     },10000);
 
+    var scrollUpdatestopbottom =  setInterval(function(){
+      $(".updates").animate({
+        scrollTop: $('.updates').height()
+      }, 5000);
+
+      setTimeout(function() {
+        $('.updates').animate({scrollTop:0}, 5000);
+      },5000);
+
+    },10000);
   </script>
 
 
