--- a/app/views/pages/home.rhtml
+++ b/app/views/pages/home.rhtml
@@ -8,7 +8,7 @@
 <div class="row">
   <div class="col-lg-12">
     <ul class="pricing-table" >
-      <li class="col-lg-4">
+      <li class="col-lg-3">
         <h3>PRIMARY</h3>
         <div class="price-body">
           <div class="price">
@@ -26,7 +26,7 @@
           <a href="/browse_by_category/<%= @primary_category_id %>" class="btn btn-info btn-rect">Browse Primary Books</a>
         </div>
       </li>
-      <li class="active danger col-lg-4">
+      <li class="active danger col-lg-3">
         <h3>Secondary</h3>
         <div class="price-body">
           <div class="price">
@@ -44,7 +44,7 @@
           <a href="/browse_by_category/<%= @secondary_category_id %>" class="btn btn-metis-1 btn-lg btn-rect">Browse Secondary Books</a>
         </div>
       </li>
-      <li class="col-lg-4">
+      <li class="col-lg-3">
         <h3>Tertiary</h3>
         <div class="price-body">
           <div class="price">
@@ -60,6 +60,25 @@
         </div>
         <div class="footer">
           <a href="/browse_by_category/<%= @tertiary_category_id %>" class="btn btn-info btn-rect">Browse Tertiary Books</a>
+        </div>
+      </li>
+
+      <li class="active danger col-lg-3" style="width: 24.5%;">
+        <h3>Readers Digest</h3>
+        <div class="price-body">
+          <div class="price">
+            <%= @readers_digest_books.count %>
+          </div>
+        </div>
+        <div class="features">
+          <ul>
+            <% @readers_digest_books.each do |book| %>
+              <li><%= book.book.title %> By <%= book.book.author %></li>
+            <% end %>
+          </ul>
+        </div>
+        <div class="footer">
+          <a href="/browse_by_category/<%= @readers_digest_category_id %>" class="btn btn-danger btn-rect">Browse Readers Digest Books</a>
         </div>
       </li>
 
