Commenting out the theme-bule css

--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -58,6 +58,11 @@
       color: #fff;
     }
 
+    .navbar-default {
+      background-color: #F8F8F8;
+      border-color: #E7E7E7;
+    }
+
     .dropdown.dropdown-lg .dropdown-menu {
       margin-top: -1px;
       padding: 6px 20px;
@@ -127,9 +132,12 @@
       padding-left: 150px;
     }
 
-    .theme-blue .navbar {
+    /*.theme-blue .navbar {
       background: rgba(0, 0, 0, 0) -moz-linear-gradient(center bottom , #F4F4F4 0%, #FFFFFF 100%) repeat scroll 0 0;
-    }
+      background-color: #FFFFFF
+    }*/
+
+
     .dropdown-toggle{
       background-color: #AAAAAA;
     }
