--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -122,9 +122,9 @@
     }
 
     .right-title{
-      position: absolute;
+      position: relative;
       padding-left: 20px;
-      padding-top: 5px;
+      top: -8px;
       color: black;
     }
 
@@ -241,7 +241,7 @@
         <span class="navbar-brand">
           <span class="left-title">ProBooks </span><i class="logo_middle">
             <img alt="ProBooks Logo" src="/images/logo.jpeg"/></i>
-          <span class="right-title"class="logo-header">Library</span>
+          <span class="right-title logo-header">Library</span>
         </span></a>
     </div>
 
