--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -40,8 +40,10 @@
   <style type="text/css">
 
     .logo_middle img{
-      height: 50px;
+      position: relative;
+      height: 62px;
       padding-bottom: 20px;
+      top: -10px;
     }
 
     #line-chart {
@@ -124,7 +126,7 @@
     .right-title{
       position: relative;
       padding-left: 20px;
-      top: -8px;
+      top: -14px;
       color: black;
     }
 
