Denying access to the application

--- a/app/views/users/access_denied.rhtml
+++ b/app/views/users/access_denied.rhtml
@@ -30,7 +30,7 @@
     <![endif]-->
     <style>
       body{
-        background-color: #FFEBCD;
+        background-color: #ddd;
       }
       img{
         border-radius: 10px;
