--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -241,7 +241,7 @@
       </a>-->
       <a class="" href="/dashboard">
         <span class="navbar-brand">
-          <span class="left-title">ProBooks </span><i class="logo_middle">
+          <span class="left-title">Agoogoo </span><i class="logo_middle">
             <img alt="ProBooks Logo" src="/images/logo.jpeg"/></i>
           <span class="right-title logo-header">Library</span>
         </span></a>
