--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -15,7 +15,7 @@
   <div class="modal-content">
     <div class="modal-header">
 
-      <h4 class="modal-title" id="myModalLabel"><b>ProBooks Login</b></h4>
+      <h4 class="modal-title" id="myModalLabel"><b>Agoogoo Library Login</b></h4>
     </div>
     <div class="modal-body">
       <div class="row">
@@ -26,7 +26,7 @@
           <figure>
             <%= image_tag("logo.jpeg", :class=> "logo") %>
             <div class="col-xs-10" style="padding-left: 50px;">
-              <b>ProBooks Malawi</b>
+              <b>Agoogoo Library</b>
             </div>
           </figure>
         </div>
@@ -72,7 +72,7 @@
             <li><span class="fa fa-check text-success"></span> Easy to use</li>
             <li><span class="fa fa-check text-success"></span> Reliable</li>
             <li><span class="fa fa-check text-success"></span> Download Books <small>(only premium customers)</small></li>
-            <li><a href="/read-more/"><u>Read more</u></a></li>
+            <!--<li><a href="/read-more/"><u>Read more</u></a></li>-->
           </ul>
           <p><a href="#" onclick="showRegistrationForm();" class="btn btn-info btn-block">Yes please, register now!</a></p>
         </div>
