--- a/app/views/students/dashboard.rhtml
+++ b/app/views/students/dashboard.rhtml
@@ -7,37 +7,77 @@
   .panel-body .btn:not(.btn-block) {
     width: 147px;
   }
+
+  .btn-sq-lg {
+    width: 150px !important;
+    height: 150px !important;
+  }
+
+  .btn-sq {
+    width: 100px !important;
+    height: 100px !important;
+    font-size: 10px;
+  }
+
+  .btn-sq-sm {
+    width: 50px !important;
+    height: 50px !important;
+    font-size: 10px;
+  }
+
+  .btn-sq-xs {
+    width: 25px !important;
+    height: 25px !important;
+    padding:2px;
+  }
+
+  .scrollable{
+    overflow: auto;
+    height: 450px;
+  }
+
+  body{
+    overflow: hidden;
+  }
 </style>
 <div class="panel panel-default" style="min-height: 500px">
   <p class="panel-heading"><b>MY BOOKS (<%= @my_books.count %>)</b></p>
-  <div class="panel-body">
-    <% unless @my_books.blank? %>
-      <ul class="list-group">
-        <% @my_books.each do |book| %>
-          <li class="list-group-item">
-            <div class="media">
-              <a href="#" class="pull-left">
-                <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
-                <img class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
-              </a>
-              <div class="media-body">
-                <p class="text-sm pull-right muted">Uploaded on <%= Book.date_book_was_saved_by_user(session[:user].user_id, book.book_id).to_date.strftime("%d-%b-%Y") rescue "&nbsp;"%></p>
-                <p class="media-heading">
-                  Book title: <a href="#"><%= book.title %></a><br />
-                  Authors: <a href="#"><%= book.author %></a></p>
-                <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
-                <button onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default"><i class="fa fa-eye"></i> Browse Book</button>
-                <button style="width: 200px;" onclick="removeBookConfirm('<%= book.book_id %>')" class="btn pull-right btn-default"><i class="fa fa-cut"></i> Remove From Shelf</button>
-              </div>
-            </div>
-          </li>
-        <% end %>
-      </ul>
-    <% else %>
-      <p>Your Book shelf is currently empty. Click the button below to add books</p>
-      <button onclick="selectBook()"class="btn btn-success"><i class="fa fa-plus"></i> Add Books</button>
-    <% end %>
+
+  <div class="scrollable">
+    <div class="panel-body">
+      <% unless @my_books.blank? %>
+        <table style="width: 100%;">
+          <% @my_books.in_groups_of(4, false).each do |group| %>
+            <tr style="padding-bottom: 100px;">
+              <% group.each do |book| %>
+                <td style="padding-right: 20px;">
+                  <a href="#">
+                    <% cover_location = "#{book.book_id}_cover_#{book.cover_photo_file_name}" %>
+                    <img alt="<%= book.title %>" class="media-object thumb-sm" src="/books/<%= cover_location %>"/>
+                  </a>
+                  <div>
+                    <p>
+                      Book title: <a href="#"><%= book.title %></a><br />
+                      Authors: <a href="#"><%= book.author %></a><br />
+                      Uploaded on <%= Book.date_book_was_saved_by_user(session[:user].user_id, book.book_id).to_date.strftime("%d-%b-%Y") rescue "&nbsp;"%>
+                    </p>
+                    <p>Subscribed By: <span class="label label-success"><%= book.users.count %></span></p>
+                    <button style="width: 200px;" onclick="viewBook('<%= book.book_id %>', '<%= book.title %>', '<%= book.author %>')" class="btn btn-default"><i class="fa fa-eye"></i> Browse Book</button><br />
+                    <button style="width: 200px;" onclick="removeBookConfirm('<%= book.book_id %>')" class="btn btn-default"><i class="fa fa-cut"></i> Remove From Shelf</button><br />
+                  </div>
+                </td>
+              <%end%>
+            </tr>
+          <% end %>
+        </table>
+
+      <% else %>
+        <p>Your Book shelf is currently empty. Click the button below to add books</p>
+        <button onclick="selectBook()"class="btn btn-success"><i class="fa fa-plus"></i> Add Books</button>
+      <% end %>
+    </div>
   </div>
+
 </div>
 
 <!-- Modal -->
