--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -106,7 +106,7 @@
       }
     }
 
-    .panel-body .btn:not(.btn-block) { width:120px;margin-bottom:10px; }
+    /*.panel-body .btn:not(.btn-block) { width:120px;margin-bottom:10px; }*/
 
     .logo-header{
       padding-bottom: 20px !important;
