--- a/app/views/users/login.rhtml
+++ b/app/views/users/login.rhtml
@@ -37,7 +37,7 @@
             <form id="loginForm" method="POST" action="/authenticate" novalidate="novalidate">
               <div class="form-group">
                 <label for="username" class="control-label">Username</label>
-                <input type="text" class="form-control" id="username" name="username" value="" required="" title="Please enter you username" placeholder="example@gmail.com"/>
+                <input type="text" class="form-control" id="username" name="username" value="" required="" title="Please enter you username" placeholder="Username"/>
                 <span class="help-block"></span>
               </div>
               <div class="form-group">
