--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -7,7 +7,7 @@
   <head>
 
     <meta charset="UTF-8" />
-    <title>proBooks</title>
+    <title>Agoogoo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="description" />
     <meta content="" name="author" />
@@ -106,7 +106,7 @@
 
             <a href="index.html" class="navbar-brand">
               <!--<img src="assets/img/logo.png" alt="" />-->
-              ProBooks
+              Agoogoo
             </a>
           </header>
           <!-- END LOGO SECTION -->
@@ -338,7 +338,7 @@
 
     <!-- FOOTER -->
     <div id="footer">
-      <p>&copy;  proBooks &nbsp;2016 &nbsp;</p>
+      <p>&copy;  Agoogoo &nbsp;<%= Date.today.year %>  &nbsp;</p>
     </div>
     <!--END FOOTER -->
     <!-- GLOBAL SCRIPTS -->
