--- a/app/views/layouts/students.rhtml
+++ b/app/views/layouts/students.rhtml
@@ -237,12 +237,12 @@
     <div class="navbar-header">
 
       <!--<a class="logo">
-        <img alt="ProBooks Logo" src="/images/logo.jpeg"/>
+        <img alt="Agoogoo Logo" src="/images/logo.jpeg"/>
       </a>-->
       <a class="" href="/dashboard">
         <span class="navbar-brand">
           <span class="left-title">Agoogoo </span><i class="logo_middle">
-            <img alt="ProBooks Logo" src="/images/logo.jpeg"/></i>
+            <img alt="Agoogoo Logo" src="/images/logo.jpeg"/></i>
           <span class="right-title logo-header">Library</span>
         </span></a>
     </div>
@@ -450,7 +450,7 @@
         <footer>
           <hr />
 
-          <p>© 2016 <a href="#">proBooks</a></p>
+          <p>© <%= Date.today.year %> <a href="#">Agoogoo</a></p>
         </footer>
       </div>
 
