--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -175,6 +175,39 @@
               <li class=""><a href="/remove_books_menu"><i class="icon-angle-right"></i> Remove Books </a></li>
             </ul>
           </li>
+
+          <li class="panel ">
+            <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#component-catalog">
+              <i class="icon-folder-open-alt"> </i>Manage Catalogs
+
+              <span class="pull-right">
+                <i class="icon-angle-left"></i>
+              </span>
+              &nbsp;
+            </a>
+            <ul class="collapse" id="component-catalog">
+
+              <li class=""><a href="/new_catalog_menu"><i class="icon-angle-right"></i> Upload Catalog </a></li>
+              <li class=""><a href="/remove_catalogs_menu"><i class="icon-angle-right"></i> Remove Catalogs </a></li>
+            </ul>
+          </li>
+
+          <li class="panel ">
+            <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#component-posters">
+              <i class="icon-folder-open-alt"> </i>Manage Posters
+
+              <span class="pull-right">
+                <i class="icon-angle-left"></i>
+              </span>
+              &nbsp;
+            </a>
+            <ul class="collapse" id="component-posters">
+
+              <li class=""><a href="/new_posters_menu"><i class="icon-angle-right"></i> Upload Catalog </a></li>
+              <li class=""><a href="/remove_posters_menu"><i class="icon-angle-right"></i> Remove Catalogs </a></li>
+            </ul>
+          </li>
+
           <li class="panel ">
             <a href="#" data-parent="#menu" data-toggle="collapse" class="accordion-toggle" data-target="#faculties-nav">
               <i class="icon-folder-open-alt"> </i>Manage Faculties
