--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -203,8 +203,8 @@
             </a>
             <ul class="collapse" id="component-posters">
 
-              <li class=""><a href="/new_posters_menu"><i class="icon-angle-right"></i> Upload Catalog </a></li>
-              <li class=""><a href="/remove_posters_menu"><i class="icon-angle-right"></i> Remove Catalogs </a></li>
+              <li class=""><a href="/new_posters_menu"><i class="icon-angle-right"></i> Upload Poster </a></li>
+              <li class=""><a href="/remove_posters_menu"><i class="icon-angle-right"></i> Remove Posters </a></li>
             </ul>
           </li>
 
